--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ header {
     /* background-color: rgb(204, 211, 251); */
     /* background-color: rgb(173, 255, 101); */
     background-color: rgb(255, 116, 0);
+    
 }
 
 section {
@@ -170,7 +171,7 @@ section.business-cards {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
                 0 1px 3px rgba(0, 0, 0, 0.433);
-    background-color: #ffffff;
+    background-color: #242424;
     /* background-color: aqua; */
 }
 
@@ -204,7 +205,7 @@ section.business-cards {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 .business-name {
@@ -266,7 +267,9 @@ img.profile-picture {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.942);
+    background-color: rgba(255, 255, 255, 0.94);
+    background-color: rgba(255, 132, 0, 0.94);
+    background-color: rgba(0, 0, 0, 0.892);
     justify-content: center;
     align-items: center;
 }
@@ -276,13 +279,14 @@ img.profile-picture {
 }
 
 .modal-content {    
-    background-color: rgb(255, 116, 0);
-    padding: 20px;
+    position: relative;
+    background-color: rgba(255, 115, 0, 0.593);
+    background-color: rgba(0, 0, 0, 0);
+    /* padding: 20px; */
     border-radius: 10px;
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     transform: scale(1.5);
-    /* text-align: center; */
 }
 
 .modal-content img {
@@ -290,14 +294,26 @@ img.profile-picture {
     width: 100%;
 }
 
-.close-modal {
+.btn-close {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 2rem;
-    color: #000;
+    top: 0%;
+    right: 3%;
+    font-size: 6rem;
+    font-weight: normal;
+    color: rgb(68, 65, 65);
     cursor: pointer;
+    background: rgba(0, 0, 0, 0);
+    /* padding: 5px 10px; */
+    border: none;
+    /* border-radius: 50%; */
+    /* z-index: 9999; */
+    transition: 0.3s;
+    &&:hover{
+        color: rgb(220, 220, 220);
+        transform: scale(1.5);
+    }
 }
+
 
 /****************************************************************/
 footer {
@@ -316,8 +332,19 @@ footer {
     transition: width 0.5s;
 }
 
+/***********************Media Queries*************************/
+
 @media screen and (max-width: 600px) {
     .main-content {
-        padding: 10px;
+        padding: 0px;
+    }
+    .modal-content {
+        transform: scale(1);
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .card img {
+        width: 100%;
     }
 }
