--- a/styles.css
+++ b/styles.css
@@ -296,17 +296,18 @@ img.profile-picture {
 
 .btn-close {
     position: absolute;
-    top: 0%;
-    right: 3%;
+    top: 1%;
+    right: 1%;
     font-size: 6rem;
     font-weight: normal;
     color: rgb(68, 65, 65);
     cursor: pointer;
-    background: rgba(0, 0, 0, 0);
-    /* padding: 5px 10px; */
+    background: rgba(89, 89, 89, 0);
+    padding: 15px;
+    line-height: .5;
     border: none;
-    /* border-radius: 50%; */
-    /* z-index: 9999; */
+    border-radius: 50%;
+    z-index: 9999;
     transition: 0.3s;
     &&:hover{
         color: rgb(220, 220, 220);
@@ -340,6 +341,13 @@ footer {
     }
     .modal-content {
         transform: scale(1);
+    }
+    .btn-close {
+        position: absolute;
+        top: 0%;
+        right: 0%;
+        padding-right: 2px;
+        padding-top: 2px;
     }
 }
 
