--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,7 @@ section.business-cards {
 .image-card-container {
     width: 300px;
 }
+
 .card img {
     width: 100%;
     height: 200px;
@@ -285,7 +286,7 @@ img.profile-picture {
     background-color: rgba(0, 0, 0, 0);
     background-color: red;
     border-radius: 10px;
-    transform: scale(1.5);
+    /* transform: scale(1.5); */
 }
 
 .modal-content img {
@@ -343,7 +344,7 @@ footer {
     }
     .modal-content {
         background-color: red;
-        transform: scale(1);
+        transform: scale(.8);
     }
     .btn-close {
         position: absolute;
@@ -353,15 +354,30 @@ footer {
         padding-top: 2px;
     }
     .card {
-        /* width: 100%; */
+        /* width: 80%; */
     }
-
+    
+    .card p {
+        max-height: 250px;
+        height: 100%;
+    }
+    
 }
 
-@media screen and (max-width: 380px) {
-    /* .card img {
-        width: 100%;
-    } */
+@media screen and (max-width: 420px) {
+    
+    .image-card-container {
+        width: 250px;
+    }
+
+    .card {
+        max-height: 80vh;
+    }
+
+    .modal-content {
+        transform: scale(.60); 
+    } 
+
     .main-title {
         font-size: .9rem;
     }
