--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,7 @@ section {
     flex-direction: row;
     justify-content: center;
     padding: 0;
-    /* max-height: 100vh;
-    height: 100%; */
+    height: 100%;
     /* background-color: rgb(99, 167, 255); */
 }
 
@@ -94,7 +93,6 @@ section.business-cards {
     font-size: 1.4rem;
     letter-spacing: 1px;
     margin-top: 15px;
-    /* overflow: auto; */
     /* background-color: white; */
     padding: 10px;
 }
@@ -143,12 +141,10 @@ section.business-cards {
 
 .carousel {
     padding-left: 5px;
-    /* margin-bottom: 20px; */
     display: flex;
     flex-direction: row;
     gap: 20px;
     width: 100%;
-    /* overflow: auto; */
     transition: transform 0.1s ease-in-out;
 }
 
@@ -198,7 +194,7 @@ section.business-cards {
     letter-spacing: 1px;
     overflow-y: scroll;
     scrollbar-width: none;
-    padding: 10px;
+    padding: 5px;
     /* text-align: left; */
     border-radius: 2px;
     max-height: 300px;
@@ -365,10 +361,7 @@ footer {
     .content-container {
         width: 100%;
         height: 100%;
-    }
-
-    section {
-        padding: 20px
+        padding: 0 10px;
     }
 
     .modal-content {
