--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,8 @@ header {
 
 section {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     padding: 0;
     height: 100%;
     /* background-color: rgb(99, 167, 255); */
@@ -79,9 +79,11 @@ section.business-cards {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 80%;
     height: 100%;
     overflow-y: scroll;
+    scrollbar-width: none;
     /* background-color: rgb(13, 255, 13); */
 }
 
@@ -358,6 +360,10 @@ footer {
         font-size: 1rem;
     }
 
+    section.home-hero {
+        padding-bottom: 20px;
+    }
+
     .content-container {
         width: 100%;
         height: 100%;
@@ -383,6 +389,7 @@ footer {
 
     .content-container h2 {
         font-size: 1.5rem;
+        text-align: center;
     }
 
     .content-container p {
@@ -420,4 +427,17 @@ footer {
         /* height: 100vh; */
     }
 
+}
+
+@media screen and (max-width: 320px) {
+    .card {
+        transform: scale(.75);
+        }
+    .carousel {
+        padding-left: 0;
+    }
+    .modal-content {
+        transform: scale(1.1); 
+        background-color: #00000000;
+    } 
 }
