--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ section.business-cards {
     border-top-right-radius: 10px;
 }
 .card-content {
-    margin: 10px 10px;
+    margin: 0 10px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -344,64 +344,15 @@ footer {
 /***********************Media Queries*************************/
 
 @media screen and (max-width: 600px) {
-    .main-content {
-        padding: 0px;
-    }
-
-    .main-container {
-        /* height: 100vh; */
-        flex-direction: column;
-        flex-grow: 1;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    .main-title{
+    .main-title {
         font-size: 1rem;
     }
 
-    section.home-hero {
-        padding-bottom: 20px;
-    }
-
-    .content-container {
-        width: 100%;
-        height: 100%;
-        padding: 0 10px;
-    }
-
     .modal-content {
-        background-color: red;
-        transform: scale(1.2);
-    }
-    .btn-close {
-        position: absolute;
-        top: 0%;
-        right: 0%;
-        padding-right: 2px;
-        padding-top: 2px;
-    }
+        transform: scale(1.4); 
+        background-color: #00000000;
+    } 
 
-    .card p {
-        max-height: 250px;
-        height: 100%;
-    }
-
-    .content-container h2 {
-        font-size: 1.5rem;
-        text-align: center;
-    }
-
-    .content-container p {
-        max-height: 200px;
-        font-size: 1.1rem;
-    }
-    
-    .business-name {
-        max-height: 50px;
-        height: 100%;
-        margin: 10px;
-    }
 }
 
 @media screen and (max-width: 420px) {
@@ -423,21 +374,42 @@ footer {
         height: 100%;
     }
 
-    .content-container {
-        /* height: 100vh; */
-    }
-
 }
 
 @media screen and (max-width: 320px) {
-    .card {
-        transform: scale(.75);
-        }
+
+    header {
+        padding: 10px;
+    }
+
+    .main-title {
+        font-size: .75rem;
+    }
     .carousel {
         padding-left: 0;
     }
+
     .modal-content {
-        transform: scale(1.1); 
-        background-color: #00000000;
+        transform: scale(.9); 
     } 
+
+    .image-card-container {
+        width: 250px;
+    }
+
+    .card-content {
+        max-height: 250px;
+    }
+
+    .business-name h2 {
+        font-size: 1.2rem;
+    }
+
+    .site-button {
+        padding: 8px;
+    }
+
+    footer {
+        padding: 10px;
+    }
 }
