--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,7 @@ img.profile-picture {
 
 .site-button {
     text-decoration: none;
-    padding: 10px 25px;
+    padding: 5px;
     width: 100%;
     border: none;
     border-radius: 50px;
@@ -262,7 +262,7 @@ img.profile-picture {
     font-weight: 600;
     text-align: center;
     background-color: rgb(47, 78, 255);
-    border: 2px solid white;
+    border: 2px solid rgb(47, 78, 255);
     color:white;
     text-transform: capitalize;
     transition: color 500ms;
@@ -304,13 +304,7 @@ img.profile-picture {
     background-color: rgba(0, 0, 0, 0);
     background-color: red;
     border-radius: 10px;
-    /* transform: scale(1.5); */
 }
-
-/* .modal-content img {
-    padding: 0;
-    width: 100%;
-} */
 
 .btn-close {
     position: absolute;
@@ -333,11 +327,6 @@ img.profile-picture {
     }
 }
 
-.larger {
-    transform: scale(1.5);
-}
-
-
 /****************************************************************/
 footer {
     width: 100%;
@@ -355,7 +344,47 @@ footer {
     transition: width 0.5s;
 }
 
+div#qr-code-container {
+    /* padding: 20px; */
+    background-color: #0f1010;
+}
+
+div#qr-code-container {
+    display: flex;
+    flex-direction: column;
+}
+
+img#qr-code {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+#qr-close-button {
+    border: 0px;
+    border-radius: 20px;
+    padding: 4px;
+    background-color: rgb(97, 97, 97);
+    color: rgb(247, 247, 247);
+    transition: background-color 500ms;
+    &&:hover {
+    background-color: rgb(171, 170, 170);
+    }
+    &&:active {
+    background-color: rgb(97, 97, 97);
+    }
+}
+
+#share-button {
+    margin-top: 10px;
+}
+
 /***********************Media Queries*************************/
+
+@media (min-width: 601px) {
+    .modal-content .card {
+        transform: scale(1.3);
+    }
+}
 
 @media screen and (max-width: 600px) {
 
@@ -377,10 +406,6 @@ footer {
         max-height: 75px;
     }
 
-    .modal-content {
-        transform: scale(1); 
-        background-color: #00000000;
-    } 
 
     .content-container {
         width: 95%;
@@ -435,10 +460,10 @@ footer {
     .main-title {
         font-size: .75rem;
     }
-    
+
     .modal-content {
-        transform: scale(.9); 
-    } 
+        transform: scale(.8);
+    }
     
     .carousel {
         padding-left: 0;
