--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: red;
+    background-color: rgb(0, 0, 0);
 }
 
 header {
@@ -34,11 +34,14 @@ header {
     color: white;
     font-size: 1.5rem;
 }
-
-/* .home-hero {
-    overflow: auto;
-    padding: 5px 0;
-    scrollbar-width: none;
+/* 
+.home-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background-color: red;
 } */
 
 .main-container {
@@ -170,9 +173,10 @@ section.business-cards {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    /* width: 100%; */
-    height: auto;
+    /* width: 300px; */
+    width: 100%;
+    /* max-height: 50vh; */
+    height: 100%;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.308), 
     0 1px 3px rgba(0, 0, 0, 0.433);
@@ -188,16 +192,18 @@ section.business-cards {
 }
 
 .image-card-container {
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
 }
 
 .card-content {
-    margin: 0 10px 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    padding: 0 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 300px;
+    /* max-height: 300px; */
     height: 100%;
     /* background-color: aqua; */
 }
@@ -234,8 +240,8 @@ section.business-cards {
     align-items: center;
     width: 100%;
     text-align: center;
-    max-height: 100px;
-    height: 100%;
+    /* max-height: 100px; */
+    height: 80px;
     padding: 10px 0;
     /* background-color: #4caf50; */
     /* background-color: rgb(58, 58, 58); */
@@ -328,14 +334,27 @@ img.profile-picture {
 }
 
 /****************************************************************/
+.current-campaign {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0 10px;
+}
+
+.campaign {
+    padding: 10px 20px;
+    width: fit-content;
+}
+
 footer {
     width: 100%;
     background-color: #000;
     color: #fff;
     padding: 20px;
     text-align: center;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+    /* border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px; */
 }
 
 .progress {
@@ -345,13 +364,11 @@ footer {
 }
 
 div#qr-code-container {
-    /* padding: 20px; */
-    background-color: #0f1010;
-}
-
-div#qr-code-container {
+    position: absolute;
+    top: 20%;
     display: flex;
     flex-direction: column;
+    background-color: #0f1010;
 }
 
 img#qr-code {
@@ -402,7 +419,6 @@ img#qr-code {
 
     .content-container {
         width: 95%;
-        height: 100%;
         justify-content: start;
         /* background-color: green; */
     }
@@ -429,25 +445,36 @@ img#qr-code {
         height: 200px;
     }
 
+    img.profile-picture {
+        width: 100px;
+        height: 100px;
+    }
+
     .card-content {
         max-height: 250px;
         height: 100%;
     }
 
     .business-name {
-        max-height: 75px;
+        height: 75px;
     }
 
+    .business-name h2 {
+        font-size: 1.4rem;
+    }
 
     .content-container {
         width: 95%;
-        height: 100%;
         justify-content: start;
         /* background-color: green; */
     }
 
     .content-container h2 {
         font-size: 1.7rem;
+    }
+
+    .content-container p {
+        font-size: 1.2rem;
     }
 
     .btn-close {
@@ -494,7 +521,7 @@ img#qr-code {
     }
 
     .modal-content {
-        transform: scale(.8);
+        transform: scale(1);
     }
     
     .carousel {
@@ -504,6 +531,10 @@ img#qr-code {
     .card-content {
         max-height: 200px;
         height: 100%;
+    }
+
+    .content-container p {
+        font-size: 1.3rem;
     }
 
     .image-card-container {
@@ -518,18 +549,21 @@ img#qr-code {
     }
     
     .business-name {
-        max-height: 50px;
-        height: 100%;
+        max-height: 60px;
     }
 
     .business-name h2 {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .site-button {
         padding: 3px;
         font-size: 1rem;
         letter-spacing: 1px;
+    }
+
+    .campaign {
+        padding: 4px 8px;
     }
 
     footer {
