--- a/styles.css
+++ b/styles.css
@@ -52,15 +52,35 @@ header {
     height: 100%;
     /* flex-grow: 1; */
     background-color: #acedff;
+
 }
 
-.cards-bg {
+.main-container.cards-bg {
+    position: relative;
     /* background-color: rgb(99, 167, 255); */
     /* background-color: rgb(204, 211, 251); */
     /* background-color: rgb(173, 255, 101); */
     /* background-color: rgb(255, 116, 0); */
-    background-color: #acedff;
-    
+    /* background-color: #acedff; */
+}
+
+
+.background-image {
+    background-image: url("images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70vh;
+    position: absolute;
+    width: 100%;
+    height: 103%;
+    /* top: 0;
+    left: 0; */
+    z-index: 0;
+    opacity: .2;
+}
+
+img.cards-bg  {
+    opacity: 0.2;
 }
 
 section {
@@ -113,11 +133,18 @@ section.business-cards {
 }
 
 /* index-cards.html */
+
+.background-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 /* Carousel Wrapper */
 .carousel-wrapper {
     position: relative;
     width: 100%;
-    /* overflow: hidden; */
 }
 
 /* Arrows */
